Dodati privacy policy i terms and conditions
U footeru dodati privacy policy i terms and conditions zbog AdSense-a.

--- a/css/style.css
+++ b/css/style.css
@@ -203,6 +203,12 @@ footer{
 	font-size: 20px;
 }
 
+.zagoogle{
+	color:white;
+	text-decoration: none;
+	padding-left:20px;
+}
+
 /* =================FUTER===================== */
 
 
