Popravljen bug za kontakt stranici sa footerom

--- a/style.css
+++ b/style.css
@@ -197,6 +197,18 @@ footer{
     margin-top: 100px;
 }
 
+.futer4{
+	background: #000000;
+    opacity:0.6;
+    filter:Alpha(opacity=60);
+    width: 100%;
+    height: 40px;
+    bottom:0;
+    clear: both;
+    text-align: center;
+    margin-top: 800px;
+}
+
 .css{
 	color:white;
 	padding-left:20px;
